src/test/deca/syntax/valid/testGEQ.deca
// test Greater or equal
// Result : OK
{
    int x = 3;
    boolean b = (x >= 2);
}
