src/test/deca/syntax/invalid/testExprWhile2.deca
// test invalid while statements
// Result : Error
{
    while (1=2){
        printx("Ok");
    }
}
